--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <body>
     <div class="form-container">
         <form id="testForm">
-            <input type="text" value="" id="testURL" required name="url" placeholder="https://google.com" class="input">
+            <input type="text" value="" id="testURL" required name="url" placeholder="Example: https://google.com"
+                class="input">
             <button id="formSubmit" class="btn btn--green">Test</button>
         </form>
         <p id="errorMessage"></p>
