--- a/index.html
+++ b/index.html
@@ -39,4 +39,5 @@
         </div>
     </footer>
     <script type="module" src="index.js"></script>
+    <link rel="preload" href="./src/js/classes/performanceReport.js" as="script" crossorigin="anonymous">
 </body>
