--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="skip-link" href="#maincontent">Skip to main</a>
     <h1>Website Tester</h1>
     <div class="form-container">
-        <label for="testURL">Enter a URL to Test</label>
+        <label for="testURL">Enter a url to test</label>
         <form id="testForm">
             <input type="text" value="" id="testURL" required name="url" placeholder="Example: https://google.com"
                 class="input">
@@ -40,4 +40,6 @@
     </footer>
     <script type="module" src="index.js"></script>
     <link rel="preload" href="./src/js/classes/performanceReport.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="./src/js/enums/colors.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="./src/js/helpers/helpers.js" as="script" crossorigin="anonymous">
 </body>
