added loading freature to website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="skip-link" href="#maincontent">Skip to main</a>
     <h1>Website Tester</h1>
     <div class="form-container">
-        <label for="testURL">Enter a url to test</label>
+        <label for="testURL">Enter a website url to test</label>
         <form id="testForm">
             <input type="text" value="" id="testURL" required name="url" placeholder="Example: https://google.com"
                 class="input">
