updated structure of HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         </form>
         <p id="errorMessage"></p>
     </div>
-    <div class="report-container"></div>
+    <div class="report-container">
+        <div class="loading"></div>
+        <div class="categories-results"></div>
+        <div class="other-results">
+            <div class="ux-container"></div>
+            <div class="lighthouse-container"></div>
+        </div>
+    </div>
     <footer>
         <div class="devpato">
             <p>Made with ❤️ by <a href="https://twitter.com/devpato">devpato</a></p>
