--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <div class="report-container">
         <div class="loading"></div>
+        <p class="tested-url"></p>
         <div class="categories-results"></div>
         <div class="other-results">
             <div class="ux-container"></div>
