--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="form-container">
             <label for="testURL">Enter a website url to test</label>
             <form id="testForm">
-                <input type="text" value="" id="testURL" required name="url" placeholder="Example: https://google.com"
-                    class="input">
+                <input type="text" value="" id="testURL" required name="url"
+                    placeholder="Example: https://developers.google.com/" class="input">
                 <button id="formSubmit" class="btn btn--green">Test</button>
             </form>
             <p id="errorMessage"></p>
